# strands-agent-example

./: .gitignore  .tool-versions  accessing_invocation_state_in_hooks.py  agent-strands-mcp-client.py  agent.py  agent_with_custom_callback_handler.py  async_agent.py  calling_cancel.py  conditional_node_execution.py  exception_handling.py  fixed_tool_arguments.py  handling_interrupts.py  hook_register_individ_callbacks.py  hooks_graph_orchestration_event.py  invocation_resume.py  limit_tool_counts.py  main.py  model_call_retries.py  multi-agent-sessions.py  multi_chain_invocations.py  plugins_and_multiple_hooks.py  pyproject.toml  result_modification.py  sm_file_session_manager.py  sm_file_session_swarm_case.py  state_across_tool_execution.py  state_app_state_basic_usage.py  state_conversation_history.py  state_conversation_manager_sliding_window.py  state_direct_tool_calling.py  state_initialize_with_messages.py  state_request_state.py
