[project]
name = "strands-agent-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "strands-agents>=1.35.0",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.4.1",
]

[dependency-groups]
dev = ["mypy>=1.20.1", "pyright>=1.1.408"]

[tool.mypy]
strict = true

[tool.pyright]
strict = ["ALL"]
